--- a/Termodinâmica.ipynb
+++ b/Termodinâmica.ipynb
@@ -11,7 +11,7 @@
         "QIl0LcIjU82_",
         "bBJiAvmS_0eS"
       ],
-      "authorship_tag": "ABX9TyOoTDu33Lfw9VymZmC37z4/",
+      "authorship_tag": "ABX9TyPpgrKqYTZHnIZRWSKkfrcc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -328,7 +328,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "##Função Interpolação"
       ],
       "metadata": {
         "id": "Gq-T9HJ_fLqJ"
@@ -339,13 +339,49 @@
       "source": [
         "import sympy as sp \n",
         "\n",
-        "#calculo de interpolação \n"
+        "#calculo de interpolação\n",
+        "#usuário chama a função colocando os valores disponíveis para interpolação\n",
+        "def interpolar(yi,x1,y1,x2,y2):\n",
+        "    x_i,y_i,x_1,y_1,x_2,y_2 = sp.symbols('x_i,y_i,x_1,y_1,x_2,y_2')\n",
+        "    eq_interpol = sp.Eq(x_i,(y_1-y_i)*(x_2-x_i)/(y_1-y_2)+x_1)\n",
+        "    interpol = sp.solve(eq_interpol.subs({y_i:yi,\n",
+        "                                        x_1:x1,\n",
+        "                                        y_1:y1,\n",
+        "                                        x_2:x2,\n",
+        "                                        y_2:y2}))[0]\n",
+        "                                        \n",
+        "    display(eq_interpol)\n",
+        "    print(f'interpolação: {interpol:.2f}')\n",
+        "\n"
       ],
       "metadata": {
-        "id": "QV6U3-AFVDhO"
+        "id": "QV6U3-AFVDhO",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "outputId": "8b9b0198-35f5-4fb1-87a9-0471fe29b8be"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Eq(x_i, x_1 + (x_2 - x_i)*(y_1 - y_i)/(y_1 - y_2))"
+            ],
+            "text/latex": "$\\displaystyle x_{i} = x_{1} + \\frac{\\left(x_{2} - x_{i}\\right) \\left(y_{1} - y_{i}\\right)}{y_{1} - y_{2}}$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "interpolação: 2.50\n"
+          ]
+        }
+      ]
     }
   ]
 }
