--- a/Termodinâmica.ipynb
+++ b/Termodinâmica.ipynb
@@ -11,7 +11,7 @@
         "QIl0LcIjU82_",
         "bBJiAvmS_0eS"
       ],
-      "authorship_tag": "ABX9TyO7+qrxqwy/furebUqR0OwW",
+      "authorship_tag": "ABX9TyPFQ3pb8gmYihXWz5/p05eu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Rhuan-Messias/Termodin-mica/blob/main/Termodin%C3%A2mica.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FONTE DOS EXERCÍCIOS\n",
+        "\n",
+        "MORAN E SHAPIRO (2009)"
+      ],
+      "metadata": {
+        "id": "-ljErv1zj181"
+      }
     },
     {
       "cell_type": "markdown",
