--- a/Termodinâmica.ipynb
+++ b/Termodinâmica.ipynb
@@ -11,7 +11,7 @@
         "QIl0LcIjU82_",
         "bBJiAvmS_0eS"
       ],
-      "authorship_tag": "ABX9TyPFQ3pb8gmYihXWz5/p05eu",
+      "authorship_tag": "ABX9TyNbR/gR+a6UsGuja3ItnUGM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -344,7 +344,7 @@
         "\n",
         "A) A razão entre as vazões mássicas m3/m1;\n",
         "\n",
-        "B) A potência de acionamento de cadacompresor;\n",
+        "B) A potência de acionamento de cada compressor;\n",
         "\n",
         "C) O coeficiente de desempenho.\n",
         "\n",
@@ -420,23 +420,112 @@
         "h7 = 91.22  #btu/lb\n",
         "#Estado 8 \n",
         "h8 = h7\n",
-        "\n"
+        "\n",
+        "#Letra A razão entre m3/m1 sabendo que m3=m6\n",
+        "m3_m1 = sp.symbols('m_3_/m_1_')\n",
+        "eq_m3m1 = sp.Eq(m3_m1,(h_7-h_2)/(h_6-h_3))\n",
+        "m3m1= float(sp.solve(eq_m3m1.subs({h_7:h7,\n",
+        "                                   h_2:h2,\n",
+        "                                   h_6:h6,\n",
+        "                                   h_3:h3}))[0])\n",
+        "print('***** Letra A *****')\n",
+        "display(eq_m3m1)\n",
+        "print(f'A razão m3/m1 = {m3m1:.3f}')\n",
+        "\n",
+        "#Letra B Potencia de cada compressor\n",
+        "#primeiro balanço no evaporador pra achar m1\n",
+        "print('\\n***** Letra B *****')\n",
+        "\n",
+        "eq_evaporador = sp.Eq(Q_entra, m_1*abs(h_1-h_8))\n",
+        "display(eq_evaporador)\n",
+        "m1 = float(sp.solve(eq_evaporador.subs({Q_entra:6000,\n",
+        "                                        h_1:h1,\n",
+        "                                        h_8:h8}))[0])\n",
+        "m3 = m3m1*m1\n",
+        "#calculo das potencias requeridas\n",
+        "print(f'm3 = {m3:.2f} : m1 = {m1:.2f}') \n",
+        "h_x,h_y,m,W_c = sp.symbols('h_x,h_y,m,W_c')\n",
+        "eq_Wc = sp.Eq(W_c,m*abs(h_x-h_y))\n",
+        "Wc1 = float(sp.solve(eq_Wc.subs({m:m1,\n",
+        "                                 h_x:h1,\n",
+        "                                 h_y:h8}))[0])\n",
+        "\n",
+        "Wc2 = float(sp.solve(eq_Wc.subs({m:m3,\n",
+        "                                 h_x:h4,\n",
+        "                                 h_y:h3}))[0])\n",
+        "\n",
+        "display(eq_Wc)\n",
+        "print(f'Compressor 1: {Wc1:.2f} HP\\nCompressor 2: {Wc2:.2f} HP')"
       ],
       "metadata": {
         "id": "yEW-R4gx-wPy",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 219
         },
-        "outputId": "11ab8d35-787a-41e1-8d16-ec731a4cd22e"
+        "outputId": "bd399497-a6bd-4d16-efc5-5a662963451c"
       },
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "700.415653495441\n",
-            "714.0207688181658\n"
+            "***** Letra A *****\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Eq(m_3_/m_1_, (-h_2 + h_7)/(-h_3 + h_6))"
+            ],
+            "text/latex": "$\\displaystyle m_{3 /m 1 } = \\frac{- h_{2} + h_{7}}{- h_{3} + h_{6}}$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A razão m3/m1 = 1.353\n",
+            "\n",
+            "***** Letra B *****\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Eq(Q_entra, m_1*Abs(h_1 - h_8))"
+            ],
+            "text/latex": "$\\displaystyle Q_{entra} = m_{1} \\left|{h_{1} - h_{8}}\\right|$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "m3 = 15.813353404055164 : m1 = 11.687021562554783\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Eq(W_c, m*Abs(h_x - h_y))"
+            ],
+            "text/latex": "$\\displaystyle W_{c} = m \\left|{h_{x} - h_{y}}\\right|$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Compressor 1: 6000.00 HP\n",
+            "Compressor 2: 1434.28 HP\n"
           ]
         }
       ]
