--- a/Termodinâmica.ipynb
+++ b/Termodinâmica.ipynb
@@ -11,7 +11,7 @@
         "QIl0LcIjU82_",
         "bBJiAvmS_0eS"
       ],
-      "authorship_tag": "ABX9TyNbR/gR+a6UsGuja3ItnUGM",
+      "authorship_tag": "ABX9TyOVuBu+lL80QM0NALzIPhr1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -448,24 +448,38 @@
         "eq_Wc = sp.Eq(W_c,m*abs(h_x-h_y))\n",
         "Wc1 = float(sp.solve(eq_Wc.subs({m:m1,\n",
         "                                 h_x:h1,\n",
-        "                                 h_y:h8}))[0])\n",
+        "                                 h_y:h2}))[0])\n",
         "\n",
         "Wc2 = float(sp.solve(eq_Wc.subs({m:m3,\n",
         "                                 h_x:h4,\n",
         "                                 h_y:h3}))[0])\n",
-        "\n",
+        "#para transformar em HP \n",
+        "# m|lb/min|60min/1h|(hx-hy)btu/lb|1HP/2545 btu/h\n",
+        "#preciso multiplicar W por 60/2545\n",
+        "Wc1 = Wc1*60/2545\n",
+        "Wc2 = Wc2*60/2545\n",
         "display(eq_Wc)\n",
-        "print(f'Compressor 1: {Wc1:.2f} HP\\nCompressor 2: {Wc2:.2f} HP')"
+        "print(f'Compressor 1: {Wc1:.2f} HP\\nCompressor 2: {Wc2:.2f} HP')\n",
+        "\n",
+        "#Letra C coeficiente de desempenho B= calor que entra/Wc\n",
+        "print('\\n***** Letra C *****')\n",
+        "beta = sp.symbols('beta')\n",
+        "eq_coef_desemp = sp.Eq(beta,Q_entra/(W_c1 + W_c2))\n",
+        "coef_desemp = float(sp.solve(eq_coef_desemp.subs({Q_entra:6000,\n",
+        "                                                  W_c1:Wc1/(60/2545),\n",
+        "                                                  W_c2:Wc2/(60/2545)}))[0])\n",
+        "display(eq_coef_desemp)\n",
+        "print(f'coeficiente de desempenho: {coef_desemp:.2f}')\n"
       ],
       "metadata": {
         "id": "yEW-R4gx-wPy",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 219
+          "height": 309
         },
-        "outputId": "bd399497-a6bd-4d16-efc5-5a662963451c"
+        "outputId": "b2738911-21ea-4f5d-9dae-3b8138cb5657"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +521,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "m3 = 15.813353404055164 : m1 = 11.687021562554783\n"
+            "m3 = 15.81 : m1 = 11.69\n"
           ]
         },
         {
@@ -524,8 +538,27 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Compressor 1: 6000.00 HP\n",
-            "Compressor 2: 1434.28 HP\n"
+            "Compressor 1: 28.38 HP\n",
+            "Compressor 2: 33.81 HP\n",
+            "\n",
+            "***** Letra C *****\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Eq(beta, Q_entra/(W_c1 + W_c2))"
+            ],
+            "text/latex": "$\\displaystyle \\beta = \\frac{Q_{entra}}{W_{c1} + W_{c2}}$"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "coeficiente de desempenho: 2.27\n"
           ]
         }
       ]
